--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "php-open-source-saver/jwt-auth": "^2.1",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
